dca101 assignment finished

--- a/views/dca102welcomepage.ejs
+++ b/views/dca102welcomepage.ejs
@@ -29,112 +29,124 @@
             
             <a href="stdDashboard" class="small"> <i class="far fa-hand-point-left text-primary small"></i> Dashboard</a>
             
-          <div class="mt-0 rounded text-justify">
+          <div class="mt-0 rounded  text-justify">
             
-            <h3 class="text-dark fs-4 text-center"> Fundamental of Computer (DCA-101:Theory)</h3>
+            <h3 class="text-dark fs-4 text-center"> Operating System (DCA-102)</h3>
             
             <hr class="text-muted">
             
-            <p class="fw-normal">Awle, tunah hian DCA I Semester hnuaia subject hmasa ber <code>(a code hming chu DCA-101) </code>kan zir dawn a, a subject hming chu  <code> Fundamental of Computer </code> a ni. 
+            <p class="fw-normal">Tuunah hian DCA I Semester hnuaia subject pahnihna <code>(a code hming DCA-102) </code>kan zir dawn a, 
+            a subject hming chu  <code> Operating System </code> a ni. 
             
-            Kan hriat angin tuna kan zir tur hi <code>theory </code> a ni dawn a. Syllabus milin kan zir ang a, chapter tin hi video te, a thu te leh assignment te hmangin kan zir dawn a ni. </p>
+            Kan hriat angin tuna kan zir tur hi <code>theory </code> a ni dawn a. 
+            Syllabus milin kan zir ang a, chapter tin hi video te, a thu te leh assignment te hmangin kan zir dawn a ni. </p>
             
 
-            <p class="fw-normal">Theory hian <code>mark 50</code> a pu a. Mark 50 chu Internal Assessment Mark 10 leh Theory exam mark 40 belhkhawm a ni a. Tuna kan zir tur hi theory exam
-            inbuatsaihna a ni dawn a. <em>Internal Assessment mark 10 ah hi chuan zirlai bik a awm lo va, institute-in zirlaite dinhmun a zir chianna atanga mark pek tur a ni.</em> </p>
+            <p class="fw-normal">Theory hian <code>mark 50</code> a pu a. Mark 50 chu 
+            Internal Assessment Mark 10 leh Theory exam mark 40 belhkhawm a ni a. Tuna kan zir tur hi theory exam
+            inbuatsaihna a ni dawn a. 
+            <em>Internal Assessment mark 10 ah hi chuan zirlai bik a awm lo va, institute-in zirlaite dinhmun a zir chianna atanga mark pek tur a ni.</em> </p>
             
             <hr class="mx-auto w-25">
             
             
            
-            <h4 class="text-dark fw-normal mt-4 ">DCA-101 Chapter te</h4>
+            <h4 class="text-dark fw-normal mt-4 ">DCA-102 Chapter te</h4>
             
             <p class="fw-normal mb-4 small ">(I zir tur chapter zelah click ang che.)</p>
+            
+            
             
             <!-- DCA I Semester subject te... -->
             
               <div class="accordion" id="accordionExample">
                 
-                  <div class="accordion-item">
+                   <div class="accordion-item">
                     
-                    <h2 class="accordion-header" id="headingOne">
+                    <h2 class="accordion-header" id="headingTwo">
                       
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         
-                        <span class="text-primary fw-bold"> 1. Fundamental of Computer (DCA-101) </span>
-                        
+                        <span class="text-danger fw-bold"> 2. Operating System (DCA-102) </span>
+                      
                       </button>
                       
                     </h2>
                     
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                       
                       <div class="accordion-body">
-                        
+
+
                         <div class="row">
+                          
+                          
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca1semOnlineLessonChapter1"><button type="button" class="btn btn-link m-2">Chapter-1 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca1semOnlineLessonChapter2"><button type="button" class="btn btn-link m-2">Chapter-2 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 <i class="fas fa-angle-right"></i></button></a>
                               
                               
                                 </div>
 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
 
-                                <a href="dca1semOnlineLessonChapter3"><button type="button" class="btn btn-link m-2">Chapter-3 <i class="fas fa-angle-right"></i></button></a>
+                                <a href="dca102onlineclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 <i class="fas fa-angle-right"></i></button></a>
 
                                 </div>
                                 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
-                              <a href="dca1semOnlineLessonChapter4"><button type="button" class="btn btn-link m-2">Chapter-4 <i class="fas fa-angle-right"></i></button></a>
+                                
+                              <a href="dca102onlineclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 <i class="fas fa-angle-right"></i></button></a>
 
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
 
-                              <a href="dca1semOnlineLessonChapter5"><button type="button" class="btn btn-link m-2">Chapter-5 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca1semOnlineLessonChapter6"><button type="button" class="btn btn-link m-2">Chapter-6 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6">
                               
-                              <a href="dca1semOnlineLessonChapter7"><button type="button" class="btn btn-link m-2">Chapter-7 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca1semOnlineLessonChapter8"><button type="button" class="btn btn-link m-2">Chapter-8 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca1semOnlineLessonChapter9"><button type="button" class="btn btn-link m-2">Chapter-9 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca1semOnlineLessonChapter10"><button type="button" class="btn btn-link m-2">Chapter-10 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca102onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
 
-                              </div>  <!--row end for first chapter-->
-                        
+                              </div><!--end of subject 2 chapter-->
+
+
+
                       </div>
                       
                     </div>
@@ -145,9 +157,9 @@
             
             <div class="d-flex justify-content-between">
               
-                <a href="dcatheorywelcomepage"><code> <i class="fas fa-step-backward"></i> Intro </code></a>
+                <a href="dca101welcomepage"><code> <i class="fas fa-step-backward"></i> DCA-101 </code></a>
               
-                <a href="dca102welcomepage"><code> Next Subject <i class="fas fa-step-forward"></i></code></a>
+                <a href="dca103welcomepage"><code> DCA-103 <i class="fas fa-step-forward"></i></code></a>
                 
                 
             </div>
