--- a/views/dcatheorywelcomepage.ejs
+++ b/views/dcatheorywelcomepage.ejs
@@ -25,27 +25,30 @@
         
         <div class="row">
           
-          <div class="mx-auto shadow-sm rounded px-4 pt-2 pb-4">
+          <div class="mx-auto shadow-sm rounded px-4 pb-4">
             
             <a href="stdDashboard" class="small"> <i class="far fa-hand-point-left text-primary small"></i> Dashboard</a>
             
-          <div class="mt-0 rounded  text-justify">
+          <div class="mt-0 rounded text-justify">
             
             <h3 class="text-dark fs-4 text-center"> DCA I Semester</h3>
             
             <hr class="text-muted">
             
-            <p class="fw-normal">DCA I Semester hi <code>thlaruk course</code> a ni a, subject ruk a awm a, subject zawng zawngah <code>theory</code> leh <code>practical </code>a awm vek a. Theory kan tih chu a thu-a zir a ni a, by-heart ngai chu a awm lem lo va, a dik ber tick <code>(multiple choice)</code> vekin question a lo kal thin a ni. </p>
+            <p class="fw-normal">DCA I Semester hi <code>thlaruk course</code> a ni a, subject ruk a awm a, subject zawng zawngah <code>theory</code> leh <code>practical </code>a awm vek a. 
+            Theory kan tih chu a thu-a zir a ni a, by-heart ngai chu a awm lem lo va, a dik ber tick <code>(multiple choice)</code> vekin question a lo kal thin a ni. </p>
             
 
-            <p class="fw-normal">Theory hian <code>mark 50</code>, practical hian <code> mark 50 </code>a pu a. Tunah hian theory kan zir dawn a, harsa lo te te, tlem te te kan zir dawn a ni. Chapter zawng zawng tawpah assignment kan dah zel a, assignment hi kan Instructor te kaihhruaina hnuaiah kan chhang thin dawn a ni. </p>
+            <p class="fw-normal">Theory hian <code>mark 50</code>, practical hian <code> mark 50 </code>a pu a. Tunah hian theory kan zir dawn a, harsa lo te te, tlem te te kan zir dawn a ni. 
+            Chapter zawng zawng tawpah assignment kan dah zel a, he assignment hi kan remchan dan milin kan chhang theuh dawn a ni. 
+            </p>
             
-            <hr class="w-50">
+            <hr class="mx-auto w-25">
            
 
-            <h4 class="text-dark fw-normal mt-4 ">DCA I Semester Subject te</h4>
+            <h4 class="text-dark fw-normal mt-4 ">DCA 1st Semester zirlai subject hmingte leh a chhunga chapter awmte</h4>
             
-            <p class="fw-normal mb-4 small ">(Subject-ah hian click la, i zir tur chapter thlang ang che.)</p>
+            <p class="fw-normal mb-4 small "> A subject zawnah hian click la, a chhunga chapter awmte a lo lang ang. <em> Note: Subject hming tawpa number hi a subject code a ni. </em>  </p>
             
             <!-- DCA I Semester subject te... -->
             
@@ -57,7 +60,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         
-                        <span class="text-primary fw-bold"> 1. Fundamental of Computer (101) </span>
+                        <span class="text-primary fw-bold"> 1. Fundamental of Computer (DCA-101) </span>
                         
                       </button>
                       
@@ -68,6 +71,13 @@
                       <div class="accordion-body">
                         
                         <div class="row">
+                          
+                          
+                            <div class="col-lg-3 col-md-6 col-sm-6"> 
+                              
+                              <a href="dca101welcomepage"><button type="button" class="btn btn-link m-2">Intro <i class="fas fa-angle-right"></i></button></a>
+                              
+                              </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -137,13 +147,16 @@
                     
                   </div>
                   
+                  
+                  
+                  
                   <div class="accordion-item">
                     
                     <h2 class="accordion-header" id="headingTwo">
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         
-                        <span class="text-danger fw-bold"> 2. Operating System (102) </span>
+                        <span class="text-danger fw-bold"> 2. Operating System (DCA-102) </span>
                       
                       </button>
                       
@@ -155,6 +168,12 @@
 
 
                         <div class="row">
+                          
+                          <div class="col-lg-3 col-md-6 col-sm-6"> 
+                              
+                              <a href="dca102welcomepage"><button type="button" class="btn btn-link m-2">Intro <i class="fas fa-angle-right"></i></button></a>
+                              
+                              </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -227,13 +246,17 @@
                     
                   </div>
                   
+                  
+                  
+                  
+                  
                   <div class="accordion-item">
                     
                     <h2 class="accordion-header" id="headingThree">
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                        
-                       <span class="text-success fw-bold"> 3. Office Automation Software (103) </span>
+                       <span class="text-success fw-bold"> 3. Office Automation Software (DCA-103) </span>
                         
                       </button>
                       
@@ -245,6 +268,12 @@
                       <div class="accordion-body">
                         
                           <div class="row">
+                            
+                            <div class="col-lg-3 col-md-6 col-sm-6"> 
+                              
+                              <a href="dca103welcomepage"><button type="button" class="btn btn-link m-2">Intro <i class="fas fa-angle-right"></i></button></a>
+                              
+                              </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -322,7 +351,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                        
-                          <span class="text-info fw-bold"> 4. Internet Technology (104) </span>
+                          <span class="text-info fw-bold"> 4. Internet Technology (DCA-104) </span>
                         
                       </button>
                       
@@ -334,6 +363,12 @@
                       <div class="accordion-body">
                         
                         <div class="row">
+                          
+                          <div class="col-lg-3 col-md-6 col-sm-6"> 
+                              
+                              <a href="dca104welcomepage"><button type="button" class="btn btn-link m-2">Intro <i class="fas fa-angle-right"></i></button></a>
+                              
+                              </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -389,7 +424,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                        
-                        <span class="text-dark fw-bold">5. Computer Graphics (105) </span>
+                        <span class="text-dark fw-bold">5. Computer Graphics (DCA-105) </span>
                         
                       </button>
                       
@@ -401,6 +436,12 @@
                       <div class="accordion-body">
                         
                         <div class="row">
+                          
+                          <div class="col-lg-3 col-md-6 col-sm-6"> 
+                              
+                              <a href="dca105welcomepage"><button type="button" class="btn btn-link m-2">Intro <i class="fas fa-angle-right"></i></button></a>
+                              
+                              </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
@@ -480,7 +521,7 @@
                       
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                        
-                          <span class="text-secondary fw-bold"> 6. Desktop Publishing (106) </span>
+                          <span class="text-secondary fw-bold"> 6. Desktop Publishing (DCA-106) </span>
                         
                       </button>
                       
@@ -492,6 +533,12 @@
                       <div class="accordion-body">
                         
                         <div class="row">
+                          
+                          <div class="col-lg-3 col-md-6 col-sm-6"> 
+                              
+                              <a href="dca106welcomepage"><button type="button" class="btn btn-link m-2">Intro <i class="fas fa-angle-right"></i></button></a>
+                              
+                              </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
