--- a/views/ejsFunction.ejs
+++ b/views/ejsFunction.ejs
@@ -11,6 +11,15 @@ convertDate = function(inputFormat) {
     
 }
 
+convertDateHourMinute = function(inputFormat) {
+  
+ var d = new Date(inputFormat)
+  
+  return d.toString();
+
+    
+}
+
 
 giveSpace = function(inputAadhar) {
 
