--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -20,13 +20,16 @@
           
           <a href="/stdList" class="fw-light small"> <i class="far fa-hand-point-left text-primary"></i> Back to List </a>
           
+         
+          
         </div>
+        
+         <button class="btn btn-sm btn-outline-primary float-end" onclick="window.print()">Print</button>
         
         <% } %>
         
         <% if ( loginIdName == 'computerStudent') { %>
         
-        <%- include('layouts/studentMenu') -%>
       
         <div class="text-center">
           
