--- a/views/layouts/studentMenu.ejs
+++ b/views/layouts/studentMenu.ejs
@@ -1,6 +1,6 @@
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 border-bottom">
         
-        <h5 class="text-secondary">Welcome, <%= username %></h5>
+        <h5 class="text-secondary"> Welcome, <%= username %> </h5>
         
        
         <div class="btn-toolbar mb-2 mb-md-0">
@@ -9,11 +9,37 @@
             
             <a href="computer/<%= studentId %>"><button type="button" class="btn btn-sm btn-outline-secondary me-2"> Profile & Fee</button></a>
             
-            <a href="#"><button type="button" class="btn btn-sm btn-outline-secondary"> Download</button></a>
+        
             
   
             
           </div>
+          
+          <!--account and profile-->
+          
+          <div class="dropdown  me-2">
+                
+                <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  
+                  Download
+                
+                </button>
+                
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  
+                  <li><a class="dropdown-item" href="#"> GuideBook </a></li>
+                  
+                  <li><a class="dropdown-item" href="#">Question hlui</a></li>
+                  
+                  <li><a class="dropdown-item" href="#">Assignment</a></li>
+                  
+                  <li><a class="dropdown-item" href="dca103welcomepage">Result</a></li>
+
+                </ul>
+              
+              </div>
+          
+          
           
           <!--thoery assignment section start-->
           
