--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -9,6 +9,8 @@
     
     <%- include('layouts/navbar') -%>
     
+    <%- include ('ejsFunction') %> <!--function javascript ejs-->
+    
 
 
     <!-- --------------main container section------------------ -->
@@ -23,15 +25,15 @@
       
       <!--second lane-->
 
-      <h5 class="mt-3 mb-3 text-primary">Status of Your Assignment</h5>
+      <p class="mt-3 mb-3 text-primary lead">Assignment Scoreboard</p>
       
       <div class="table-responsive">
         
-        <table class="table table-striped table-sm">
+        <table class="table table-striped table-sm myTable">
           
           <thead>
             
-            <tr>
+            <tr class="text-muted bg-white border text-center">
               
               <th>Sl</th>
               
@@ -39,132 +41,65 @@
               
               <th>Chapter</th>
               
-              <th>Score</th>
+              <th>Scored</th>
               
-              <th>Date</th>
+              <th>Submitted on</th>
+              
+              <th>Action</th>
+              
+              
               
             </tr>
             
           </thead>
           
-          <tbody>
+          <tbody class="text-center">
             
-            <tr>
+            <%    if( thisStudent.assignmentTheory != undefined) {
+            
+                      for(var i=0; i < thisStudent.assignmentTheory.length; i++) {
+
+                  %>
+            
+           <tr>
               
-              <td>1,001</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
+              <th class="text-center fw-normal"><%= i + 1 %></th>
+              
+              <td class="text-center fw-normal"><%= thisStudent.assignmentTheory[i].subjectName %></td>
+              
+              <td class="text-center fw-normal"><%= thisStudent.assignmentTheory[i].chapterName %></td>
+              
+              <td class="text-center fw-normal">
+                
+                <a href="/assignment/checkScore/<%= thisStudent.assignmentTheory[i]._id %>" >  5/5
+                  
+                  </a>
+
+              </td>
+              
+              <td class="text-center fw-normal"><%= convertDate(thisStudent.assignmentTheory[i].dateSubmitted) %></td>
+              
+              <td>
+                
+                 <a href="/assignment/delete/<%= studentId %>/<%= thisStudent.assignmentTheory[i]._id %>" onclick="return confirm('Are you sure to delete this assignment record?');">
+                  
+                  <i class="fas fa-times p-1 text-muted" aria-hidden="true"></i></a>
+              
+              </td>
+  
             </tr>
-            <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,004</td>
-              <td>text</td>
-              <td>random</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,005</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>placeholder</td>
-            </tr>
-            <tr>
-              <td>1,006</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,007</td>
-              <td>placeholder</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>irrelevant</td>
-            </tr>
-            <tr>
-              <td>1,008</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,009</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,011</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,012</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,013</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>visual</td>
-            </tr>
-            <tr>
-              <td>1,014</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,015</td>
-              <td>random</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>text</td>
-            </tr>
+        
+            <% } } %>
+
           </tbody>
+          
         </table>
+        
       </div>
+      
+      
+      
+      
     </main>
 </div>
 
